--- a/css/main.css
+++ b/css/main.css
@@ -398,9 +398,9 @@ img {
   }
 }
 
-@media screen and (min-width: 738px) {
+@media screen and (min-width: 768px) {
   .container {
-    width: 738px;
+    width: 768px;
     outline: 2px solid blue;
   }
 }
@@ -458,7 +458,7 @@ section.title {
   background-color: transparent;
 }
 
-@media screen and (min-width: 738px) {
+@media screen and (min-width: 768px) {
   .button-menu {
     display: none;
   }
@@ -486,7 +486,7 @@ section.title {
 
 .menu-container {
   padding: 0px;
-  background-color: #bbbbbb;
+  background-color: #ffffff;
   text-align: center;
   font-size: 18px;
 }
@@ -495,7 +495,18 @@ section.title {
   display: block;
 }
 
-@media screen and (max-width: 737px) {
+@media screen and (min-width: 768px) {
+  .menu-container.is-open {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 767px) {
   .menu-container {
     display: none;
     height: 393px;
@@ -506,17 +517,17 @@ section.title {
   }
 }
 
-@media screen and (min-width: 738px) {
+@media screen and (min-width: 768px) {
   .menu-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
+    -webkit-box-flex: 2;
+        -ms-flex-positive: 2;
+            flex-grow: 2;
   }
 }
 
@@ -525,7 +536,7 @@ section.title {
 }
 
 .contacts {
-  outline: 1px solid crimson;
+  outline: 1px solid ci;
   color: #757575;
 }
 
@@ -550,11 +561,50 @@ section.title {
   color: #000000;
 }
 
+@media screen and (min-width: 768px) {
+  .site-nav .item {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    margin-left: 88px;
+    font-size: 14px;
+  }
+  .site-nav .item:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .site-nav .item:first-child {
+    padding-top: 60px;
+  }
+  .site-nav .item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding-bottom: 40px;
+  }
+}
+
 .auth-nav {
   margin-left: auto;
 }
 
-@media screen and (min-width: 738px) {
+@media screen and (min-width: 768px) {
+  .auth-nav .item {
+    display: block;
+    text-align: left;
+    font-size: 12px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
   .auth-nav .item {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
@@ -565,9 +615,10 @@ section.title {
   }
 }
 
-@media screen and (max-width: 737px) {
+@media screen and (max-width: 767px) {
   .auth-nav .item:first-child {
     padding-top: 20px;
+    font-size: 18px;
   }
   .auth-nav .item {
     display: -webkit-box;
@@ -589,33 +640,7 @@ section.title {
   text-decoration: none;
 }
 
-@media screen and (min-width: 738px) {
-  .site-nav .item {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    -webkit-box-align: baseline;
-        -ms-flex-align: baseline;
-            align-items: baseline;
-  }
-}
-
-@media screen and (max-width: 737px) {
-  .site-nav .item:first-child {
-    padding-top: 60px;
-  }
-  .site-nav .item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    padding-bottom: 40px;
-  }
-}
-
-.site-nav .link {
+.link {
   display: block;
   padding-top: 0px;
   font-weight: 500;
@@ -1582,13 +1607,13 @@ section.title {
 }
 
 /* ********************************************************************* */
-.auth-nav, .site-nav, .features-set, .reviews-set {
+.site-nav, .auth-nav, .features-set, .reviews-set {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-@media screen and (min-width: 738px) {
+@media screen and (min-width: 768px) {
   .features-set {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -1613,7 +1638,7 @@ section.title {
   font-size: 32px;
 }
 
-@media screen and (min-width: 738px) {
+@media screen and (min-width: 768px) {
   .features-item {
     -ms-flex-preferred-size: calc((100% - 2 * 10px)/2);
         flex-basis: calc((100% - 2 * 10px)/2);
