--- a/sass/components/_page_header.scss
+++ b/sass/components/_page_header.scss
@@ -36,13 +36,18 @@
 .menu-container{
 
     padding: 0px;
-    background-color: rgb(187, 187, 187);
+    background-color: $white    ;
     text-align: center;
     font-size: 18px;
     &.is-open{  
         display: block;
+        @media screen and (min-width: $tablet){
+            display: inline-flex;
+            justify-content: space-between;
+            // flex-grow: 1;
+        }
     }
-    @media screen and (max-width: 737px){
+    @media screen and (max-width: 767px){
         display: none;
         height: 393px;
         position: absolute;
@@ -52,10 +57,9 @@
 
     }
     @media screen and (min-width: $tablet){
-        display: flex;
+        display: inline-flex;
         justify-content: space-between;
-        flex-grow: 1;
-        
+        flex-grow: 2; 
     }
 }
 .navigation{
@@ -64,7 +68,7 @@
 }
 .contacts{
 
-    outline: 1px solid crimson;
+    outline: 1px solid ci;
     color: $gray;
 }
 
@@ -84,19 +88,54 @@
 .webstudio-header {
     color: $black; 
 }
-
-.auth-nav {
+.site-nav{
     @extend %list;
+
     @media screen and (min-width: $tablet){
         .item{
             display: inline-flex;
             align-items: baseline;
+            margin-left: 88px;
+            font-size: 14px;
+        }
+        .item:not(:last-child){
+            margin-right: 50px;
         }
     }
-    @media screen and (max-width:737px){
+    @media screen and (max-width:767px){
+        .item:first-child{
+            padding-top: 60px;
+
+        }
+        .item{
+            display: flex;
+            justify-content: center;
+            padding-bottom: 40px;
+         }
+    }
+
+}
+.auth-nav {
+    @extend %list;
+    @media screen and (min-width: $tablet){
+        .item{
+            display: block;
+            text-align: left;
+            font-size: 12px;
+        }
+        
+    }
+    @media screen and (min-width: $desktop){
+        .item{
+            display: inline-flex;
+            align-items: baseline;
+        }
+        
+    }
+    @media screen and (max-width:767px){
         .item:first-child{
             padding-top: 20px;
-
+            font-size: 18px; 
         }
         .item{
             display: flex;
@@ -115,55 +154,14 @@
         letter-spacing: 0.02em;  
         color: inherit;
         text-decoration: none;
-        // @media screen and (max-width:737px){
-        //     padding-bottom: 16px;
-        //     font-size: 18px; 
-        // }
-    
-        // @media screen and (min-width:$tablet){
-        //     padding-top: 0px;
-        //     font-size: 14px;
-            
-        // }
+
+
+
     }
-
-
-    // @media screen and (min-width:$tablet){
-    //     display: flex;
-      
-    // }
-    // @media screen and (max-width:$tablet){
-    //     display: inline-block;
-       
-    // }
 }
 
-// @media screen and (max-width: 737px){
 
-// }
-// @media screen and (min-width: $tablet){
-    
-// }
-.site-nav{
-    @extend %list;
 
-    @media screen and (min-width: $tablet){
-        .item{
-            display: inline-flex;
-            align-items: baseline;
-        }
-    }
-    @media screen and (max-width:737px){
-        .item:first-child{
-            padding-top: 60px;
-
-        }
-        .item{
-            display: flex;
-            justify-content: center;
-            padding-bottom: 40px;
-         }
-    }
 
 .link{
     display: block;
@@ -176,30 +174,10 @@
     letter-spacing: 0.02em;
     text-decoration: none;
     color: inherit;
-  
-    // @media screen and (max-width:737px){
-      
-    //     padding-bottom: 40px; 
-    //     font-size: 18px; 
-    // }
-
-    // @media screen and (min-width:$tablet){
-    //     padding-top: 32px;
-    //     font-size: 14px;
-        
-    // }
- 
 }
-    // @media screen and (min-width:$tablet){
-    //     display: flex;
-    //     margin-left: 93px;
-    // }
-    // @media screen and (max-width:$tablet){
-    //     display: inline-block;
-    //     margin-left: 0px;
-    // }
 
-}
+
+
 
 .link:hover,
 .link:focus{
@@ -219,13 +197,7 @@ color: $accent-cl;
     border-radius: 2px;
     margin-left: auto;
     margin-right: auto;
-    
-    // @media screen and (min-width:$tablet){
-    //     top: 32px;
-    // }
-    // @media screen and (max-width:$tablet){
-    //     top: 8px;
-    // }
+
     
 
 }
@@ -235,9 +207,6 @@ color: $accent-cl;
 // .auth-nav .item +.item {
 //         margin-left: 0px;
 // }
-
-
-
 
 .accent{
     color: $accent-cl;
